Fixes #181: When there are lots of subjects, make the list collapsable/expandable.

--- a/static/css/astrobin.less
+++ b/static/css/astrobin.less
@@ -2082,3 +2082,8 @@ div.capty-caption a {
         margin-top: @spacer-medium;
         .box-shadow;}}
 
+#more-subjects {
+    .more, .collapse {
+        display: none;
+    }
+}
